--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Tutorials<b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li></li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
+                    <li></li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_collection_observable.html">kb.CollectionObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
                   </ul>
                 </li>
                 <li><a href="https://github.com/kmalakoff/knockback/wiki/Release-Notes">Release Notes</a></li>
@@ -106,7 +106,7 @@
             </div>
             <div class="content row">
               <div class="span7 wrapped">
-                <h2>Download Latest <small>0.16.1</small></h2>
+                <h2>Download Latest <small>0.16.2</small></h2>
                 <table class="table">
                   <thead>
                     <tr>
@@ -120,14 +120,14 @@
                       <td>Full</td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.1/knockback.js'>Development</a> <small>69 KB</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.1/knockback.min.js'>Production</a> <small>32 KB</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.2/knockback.js'>Development</a> <small>69 KB</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.2/knockback.min.js'>Production</a> <small>32 KB</small></li>
                         </ul>
                       </td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.1/knockback-full-stack.js'>Development</a> <small>330 KB</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.1/knockback-full-stack.min.js'>Production</a> <small>102 KB</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.2/knockback-full-stack.js'>Development</a> <small>330 KB</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.2/knockback-full-stack.min.js'>Production</a> <small>102 KB</small></li>
                         </ul>
                       </td>
                     </tr>
@@ -135,14 +135,14 @@
                       <td>Core</td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.1/knockback-core.js'>Development</a> <small>58 KB</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.1/knockback-core.min.js'>Production</a> <small>27 KB</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.2/knockback-core.js'>Development</a> <small>58 KB</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.2/knockback-core.min.js'>Production</a> <small>27 KB</small></li>
                         </ul>
                       </td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.1/knockback-core-stack.js'>Development</a> <small>319 KB</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.1/knockback-core-stack.min.js'>Production</a> <small>98 KB</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.2/knockback-core-stack.js'>Development</a> <small>319 KB</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.2/knockback-core-stack.min.js'>Production</a> <small>98 KB</small></li>
                         </ul>
                       </td>
                     </tr>
