Added AMD loading.

--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -39,13 +39,13 @@
     <iframe src="backbone-modelref/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="backbone-relational/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-memory-management/test-latest.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback-legacy/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="packaging/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="lodash/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="deprecated/test-latest.html" scrolling="auto" frameborder="0"></iframe>
   </div>
 
   <div class="test-block">
-    <h1 class="qunit-header">Knockback.js - All Tests (Legacy)</h1>
+    <h1 class="qunit-header">Knockback.js - All Tests (Deprecated)</h1>
     <iframe src="knockback-observable/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-collection-observable/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-view-model/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
@@ -61,7 +61,7 @@
     <!-- KNOCKOUT DIDN'T SUPPORT MODULES -->
     <!-- <iframe src="packaging/test-legacy.html" scrolling="auto" frameborder="0"></iframe> -->
     <iframe src="lodash/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="deprecations/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="deprecated/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
   </div>
 
   <div class="test-block">
@@ -69,7 +69,7 @@
     <iframe class="full_width" src="interactive/test-latest.html" scrolling="auto" frameborder="0"></iframe>
   </div>
   <div class="test-block">
-    <h1 class="qunit-header">Interactive Tests (Legacy)</h1>
+    <h1 class="qunit-header">Interactive Tests (Deprecated)</h1>
     <iframe class="full_width" src="interactive/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
   </div>
 </body>
