--- a/test/deprecated/test-latest.html
+++ b/test/deprecated/test-latest.html
@@ -2,7 +2,7 @@
 <html>
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
-  <title>Knockback Legacy Test Suite</title>
+  <title>Knockback Deprecated Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
   <script type="text/javascript" src="../../vendor/knockout-2.1.0.js"></script>
   <script type="text/javascript" src="../../vendor/underscore-1.3.3.js"></script>
@@ -20,7 +20,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback Legacy Test Suite</h1>
+    <h1 id="qunit-header">Knockback Deprecated Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
