--- a/test/issues/issue34/issue34.html
+++ b/test/issues/issue34/issue34.html
@@ -28,8 +28,9 @@
       <!-- /ko  -->
   </ul>
 
-  <script src="client-bundle.js"></script>
-  <script src="../../knockback.js"></script>
+  <script src="../../vendor/qunit/jquery.js"></script>
+  <script src="../../../knockback-core-stack.js"></script>
+  <script src="../../../vendor/optional/backbone-relational-0.6.0.js"></script>
   <script src="issue34.js"></script>
 
 </body>
