--- a/test/issues/issue37/issue37.html
+++ b/test/issues/issue37/issue37.html
@@ -25,8 +25,8 @@
       <code id="theJson"></code>
   </div>​
 
-  <script src="client-bundle.js"></script>
-  <script src="../../knockback.js"></script>
+  <script src="../../vendor/qunit/jquery.js"></script>
+  <script src="../../../knockback-core-stack.js"></script>
   <script src="issue37.js"></script>
 
 </body>
