--- a/test/issues/issue35/issue35.html
+++ b/test/issues/issue35/issue35.html
@@ -46,8 +46,9 @@
   <button data-bind='click: showBS'> Show BS</button>
   <button data-bind='click: changeInCode'>Change in Code</button>
 
-  <script src="client-bundle.js"></script>
-  <script src="../../knockback.js"></script>
+  <script src="../../vendor/qunit/jquery.js"></script>
+  <script src="../../../knockback-core-stack.js"></script>
+  <script src="../../../vendor/optional/backbone-relational-0.6.0.js"></script>
   <script src="issue35.js"></script>
 
 </body>
