Updated CollectionObservable examples and fixed 0.16.2 links.

--- a/tutorial_nested_models.html
+++ b/tutorial_nested_models.html
@@ -192,15 +192,15 @@ fred = new Backbone.Model({name: "Fred", friends: new Backbone.Collection([bob])
 bob.set({friends: new Backbone.Collection([fred])})
 
 FriendViewModel = (model, options) ->
+  @type = 'friend'
   @name = kb.observable(model, 'name')
-  @type = ko.observable('friend')
   @friends = kb.collectionObservable(model.get('friends'), kb.utils.optionsPathJoin(options, 'friends'))
   @
 
 class PersonViewModel extends kb.ViewModel
   constructor: (model, options) ->
+    @type = 'person'
     super
-    @type = ko.observable('person')
 
 view_model = new PersonViewModel(fred, {
   factories:
@@ -214,16 +214,16 @@ var fred = new Backbone.Model({name: "Fred", friends: new Backbone.Collection([b
 bob.set({friends: new Backbone.Collection([fred])});
 
 var FriendViewModel = function(model, options) {
+  this.type = 'friend';
   this.name = kb.observable(model, 'name');
-  this.type = ko.observable('friend');
   this.friends = kb.collectionObservable(model.get('friends'), kb.utils.optionsPathJoin(options, 'friends'));
   return this;
 };
 
 var PersonViewModel = kb.ViewModel.extend({
   constructor: function(model, options) {
+    this.type = 'person';
     kb.ViewModel.prototype.constructor.apply(this, arguments);
-    this.type = ko.observable('person');
   }
 });
 
