Mid-injection implementation

--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -30,6 +30,7 @@
     <iframe src="knockback-collection-observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-view-model/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-utils/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback-inject/test-latest.html" scrolling="auto" frameborder="0"></iframe>
 
     <iframe src="knockback-defaults/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-formatting/test-latest.html" scrolling="auto" frameborder="0"></iframe>
@@ -50,6 +51,7 @@
     <iframe src="knockback-collection-observable/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-view-model/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-utils/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback-inject/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
 
     <iframe src="knockback-defaults/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-formatting/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
