--- a/test/knockback-validation/test-latest.html
+++ b/test/knockback-validation/test-latest.html
@@ -2,19 +2,16 @@
 <html>
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
-  <title>Knockback.ViewModel Test Suite</title>
+  <title>Knockback Validation Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../vendor/knockout-1.2.1.debug.js"></script>
-  <script type="text/javascript" src="../../vendor/underscore-1.1.7.js"></script>
-  <script type="text/javascript" src="../../vendor/backbone-0.5.1.js"></script>
+  <script type="text/javascript" src="../../vendor/knockout-2.1.0.js"></script>
+  <script type="text/javascript" src="../../vendor/underscore-1.3.3.js"></script>
+  <script type="text/javascript" src="../../vendor/backbone-0.9.2.js"></script>
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback-core.js"></script>
-  <script type="text/javascript" src="../../lib/knockback-localization.js"></script>
+  <script type="text/javascript" src="../../lib/knockback-validation.js"></script>
   <script type="text/javascript" src="../../lib/knockback-statistics.js"></script>
-
-  <!-- HELPERS -->
-  <script type="text/javascript" src="../../test/_examples/build/_contact_examples.js"></script>
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
@@ -25,7 +22,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback.ViewModel Test Suite</h1>
+    <h1 id="qunit-header">Knockback Validation Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
