--- a/tutorial_inject.html
+++ b/tutorial_inject.html
@@ -14,7 +14,7 @@
     <script type="application/javascript" src="vendor/globalize/globalize.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.fr-FR.js"></script>
-    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.16.2.js"></script>
+    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.16.3.js"></script>
     <script type="application/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="vendor/google-code-prettify/prettify.js"></script>
     <script type="application/javascript" src="js/stylecode.js"></script>
@@ -77,7 +77,7 @@
 <p><a href="index.html">Knockback.js</a> provides an a few helpers to inject application code in a similar way to <a href="http://angular.org">Angular.js</a> so you can build up an application by dynamically adding observables to your ViewModel directly from your HTML.
 
 </p>
-<p>The following examples show how you might port Angular.js samples to Knockback to help you compare approaches. There&#39;s no magic here, just a kb-app attribute and a custom kb-inject Knockout bindings to add observables to your ViewModel.
+<p>The following examples show how you might port Angular.js samples to Knockback to help you compare approaches. There&#39;s no magic here, just a kb-app attribute and a custom inject Knockout bindings to add observables to your ViewModel. Itis really a lot easier than memorizing or looking up a large number of custom &#39;ng-{something}&#39; bindings!
 
 </p>
 <p>There are a few helpers to get us started:
